# MetaOS

./: .bazelproject  .bazelrc  .clang-format  .clangd  .dockerignore  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-project  bazel-testlogs  bazel.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
bazel/: BUILD.bazel  deps.bzl
cicd_module/: CMakeLists.txt  main.cpp
cicd_module/include/adapters/: cicd_dbus_adapter.h
cicd_module/include/providers/: github_provider.h  ipipeline_provider.h
cicd_module/src/adapters/: cicd_dbus_adapter.cpp
cicd_module/src/providers/: github_provider.cpp
components/cicd_module/: BUILD.bazel  main.cpp
components/cicd_module/include/: fetcher.h  sender.h
components/cicd_module/include/adapters/: cicd_dbus_adapter.h
components/cicd_module/include/providers/: ipipeline_provider.h
components/cicd_module/src/: fetcher.cpp  sender.cpp
components/cicd_module/src/adapters/: cicd_dbus_adapter.cpp
components/cicd_module/src/providers/: github_provider.cpp
components/controller/: BUILD.bazel
components/controller/server/: main.cc
components/controller/server/shell_controller/include/: shell_controller.hh
components/matrix/: BUILD.bazel  Cargo.toml
components/matrix/src/: main.rs
components/metadaemon/: BUILD.bazel
components/metadaemon/server/: main.cc
components/metadaemon/server/cicd_controller/include/: cicd_controller.hh
components/metadaemon/server/shell_controller/include/: shell_controller.hh
components/metadaemon/server/shell_controller/src/: shell_controller.cc
components/metahub/: BUILD.bazel  CMakeLists.txt
components/metahub/qml/: Main.qml  Theme.qml
components/metahub/src/: main.cpp
components/metahub/src/cicd_view_model/include/: cicd_view_model.hpp
components/metahub/src/cicd_view_model/src/: cicd_view_model.cpp
components/vpn_manager/: BUILD.bazel  main.cpp
docs/components/: agent.md  cicd_module.md  deck.md  interlink.md  matrix.md  metadaemon.md  sonar.md
docs/modules/: agent.md  deck.md  sonar.md
matrix/src/: main.rs
metadaemon/: CMakeLists.txt  main.cc
metadaemon/cicd_controller/src/: cicd_controller.cc
metadaemon/shell_controller/: CMakeLists.txt
metadaemon/shell_controller/include/: shell_controller.hh
metahub/: CMakeLists.txt
metahub/qml/: Main.qml  Theme.qml
metahub/src/: main.cpp
metahub/src/cicd_view_model/include/: auth_manager.hpp  cicd_view_model.hpp
metahub/src/cicd_view_model/src/: auth_manager.cpp  cicd_view_model.cpp
modules/: CMakeLists.txt
modules/agent/: CMakeLists.txt  main.cc
modules/agent/shell_controller/: CMakeLists.txt
modules/agent/shell_controller/include/: shell_controller.hh
modules/agent/shell_controller/src/: shell_controller.cc
modules/agent/sonar_controller/src/: sonar_controller.cc
modules/deck/: CMakeLists.txt  main.cpp
modules/deck/qml/: Main.qml  qml.qrc
modules/deck/qml/components/: AuthPopup.qml
modules/deck/sonar/: auth_manager.cpp  auth_manager.hpp  sonar_view_model.cpp  sonar_view_model.hpp
modules/deck/utils/: json_network_manager.hpp
modules/interlink/: Cargo.toml
modules/interlink/src/: auth.rs  cia.rs  main.rs
modules/interlink/src/common/: common.rs  config.rs  mod.rs
modules/interlink/src/listeners/: sonar.rs
modules/magfield/: CMakeLists.txt
modules/sonar/: CMakeLists.txt  main.cpp
modules/sonar/include/adapters/: dbus_adapter.h
modules/sonar/include/providers/: github_provider.h  ipipeline_provider.h
modules/sonar/src/adapters/: dbus_adapter.cpp
modules/sonar/src/providers/: github_provider.cpp
protocols/: CMakeLists.txt
protocols/dbus/cicd/: cicdDataFetch.xml
protocols/dbus/sonar/: fetchPipelineData.xml
protocols/grpc/agent/: CMakeLists.txt
protocols/grpc/metadaemon/: CMakeLists.txt
protocols/grpc/metaos/controller/: BUILD.bazel
protocols/grpc/metaos/metadaemon/: BUILD.bazel
vpn_manager/: CMakeLists.txt
