# BUILD.bazel
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
      "//components/cicd_module:cicd_module": "",
      "//components/metadaemon:server": "",
      "//components/metahub:metahub": "",
    },

    exclude_external_sources = True,
    exclude_headers = "all",
)

filegroup(
    name = "env_file",
    srcs = [".env"],
    visibility = ["//visibility:public"],
)
