# metaos/MODULE.bazel

module(
    name = "metaos",
    version = "0.0.1",
)

bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "cpp-httplib", version = "0.22.0") 
bazel_dep(name = "protobuf", version = "28.0")
bazel_dep(name = "grpc", version = "1.72.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

non_module_deps = use_extension("//bazel:deps.bzl", "non_module_deps")
use_repo(non_module_deps, "libenvpp", "fmt")
