# metaos/MODULE.bazel

module(
    name = "metaos",
    version = "0.0.1",
)

bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "cpp-httplib", version = "0.22.0") 
bazel_dep(name = "protobuf", version = "28.0")
bazel_dep(name = "grpc", version = "1.72.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

fmt_dep = use_extension("//bazel:deps.bzl", "fmt_dep")
use_repo(fmt_dep, "fmt")

libenvpp_dep = use_extension("//bazel:deps.bzl", "libenvpp_dep")
use_repo(libenvpp_dep, "libenvpp")
