load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "matrix",
    srcs = ["src/main.rs"],
    edition = "2024",
        deps = [
        "@crates//:matrix-sdk",
        "@crates//:tokio",
        "@crates//:anyhow",
        "@crates//:tracing-subscriber",
        "@crates//:tracing",
        "@crates//:dotenv",
    ],
    visibility = ["//visibility:public"],
)