[package]
name = "matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.14.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1.41"
dotenv = "0.15.0"

[package.metadata.raze]
workspace_path = "//components/matrix"
genmode = "Remote"
output_buildfile_suffix = "BUILD.bazel"