load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "shell_controller_lib",
    srcs = glob(["server/shell_controller/src/**/*.cc"]),
    hdrs = glob(["server/shell_controller/include/**/*.hh"]),
    strip_include_prefix = "server/shell_controller/include",
    deps = [
        "//protocols/grpc/metaos/metadaemon:metadaemon_cc_proto",
        "//protocols/grpc/metaos/metadaemon:metadaemon_cc_grpc",
        "@grpc//:grpc++",
    ],
)

cc_library(
    name = "cicd_controller_lib",
    srcs = glob(["server/cicd_controller/src/**/*.cc"]),
    hdrs = glob(["server/cicd_controller/include/**/*.hh"]),
    strip_include_prefix = "server/cicd_controller/include",
    deps = [
        "//protocols/grpc/metaos/metadaemon:metadaemon_cc_proto",
        "//protocols/grpc/metaos/metadaemon:metadaemon_cc_grpc",
        "@grpc//:grpc++",
    ],
)

cc_binary(
    name = "server",
    srcs = ["server/main.cc"],
    deps = [
        ":shell_controller_lib",
        ":cicd_controller_lib",
        "@grpc//:grpc++_reflection",
    ],
)