package(default_visibility = ["//visibility:public"])

genrule(
    name = "metahub",
    srcs = glob([
        "src/**/*.cpp",
        "src/**/*.hpp",
        "CMakeLists.txt",
        "qml/**/*",
    ]),
    outs = ["metahub_executable"],
    cmd = """
        SOURCE_DIR=$$(dirname $(location :CMakeLists.txt))
        BUILD_DIR="cmake_build_dir"

        mkdir -p $$BUILD_DIR
        
        cmake \\
            -S $$SOURCE_DIR \\
            -B $$BUILD_DIR \\
            -DCMAKE_INSTALL_PREFIX=./install \\

        cmake --build $$BUILD_DIR

        cp $$BUILD_DIR/MetaHub $(location metahub_executable)
    """,
    executable = True,
)