# metaos/components/cicd_module/BUILD.bazel

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "vpn_module_lib",
    srcs = [
        "src/network_scan.cpp",
    ],
    hdrs = [
        "include/network_scan.h",
    ],
    strip_include_prefix = "include",
    copts = [
        "-std=c++23",
    ],
    linkopts = [
        "-lsdbus-c++",
        "-lssl",
        "-lcrypto",
        "-lz",
    ],
)

cc_binary(
    name = "vpn_module",
    srcs = ["main.cpp"],
    deps = [":vpn_module_lib"],
    data = ["//:env_file"],
)