[package]
name = "interlink"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
async-trait = "0.1.89"
anyhow = "1.0"

tracing = "0.1.41"
tracing-subscriber = "0.3"

serde = "1.0.228"
serde_json = "1.0.149"
dotenv = "0.15.0"

dirs = "6.0.0"
keyring = "3.6.3"
rand = "0.9.2"

matrix-sdk = "0.14.0"
zbus = "=5.13.2"

[[bin]]
name = "interlink"
path = "src/main.rs"