# metaos/protocols/grpc/metaos/controller/BUILD.bazel

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

proto_library(
    name = "controller_proto",
    srcs = ["system.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "controller_cc_proto",
    deps = [":controller_proto"],
    visibility = ["//visibility:public"],
)

cc_grpc_library(
    name = "controller_cc_grpc",
    srcs = [":controller_proto"],
    grpc_only = True,
    deps = [":controller_cc_proto"],
    visibility = ["//visibility:public"],
)