# metaos/protocols/grpc/metaos/controller/BUILD.bazel

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "metadaemon_proto",
    srcs = ["system.proto"],
)

cc_proto_library(
    name = "metadaemon_cc_proto",
    deps = [":metadaemon_proto"],
)

cc_grpc_library(
    name = "metadaemon_cc_grpc",
    srcs = [":metadaemon_proto"],
    grpc_only = True,
    deps = [":metadaemon_cc_proto"],
)